<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.TestResultFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:background="@color/sariq"
        android:padding="16dp"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivBack"
            android:src="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/natija"

            android:textColor="@color/kulrang"
            android:textSize="32sp"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/kubog"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:background="@drawable/background_white_questions"
                android:elevation="8dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/count"
                    android:id="@+id/tvCorrects"
                    android:textSize="26sp"
                    android:textColor="#10CB71"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:textColor="#10CB71"
                    android:text="@string/correct"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"

                android:layout_margin="15dp"
                android:orientation="vertical"
                android:background="@drawable/background_white_questions"
                android:elevation="8dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/count"
                    android:id="@+id/tvWrongs"
                    android:textSize="26sp"
                    android:textColor="#E5313C"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:textColor="#E5313C"
                    android:text="@string/wrong"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:background="@drawable/background_white_questions"
                android:elevation="8dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/count"
                    android:id="@+id/tvTotal"
                    android:textSize="26sp"
                    android:textColor="#020202"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:textColor="#020202"
                    android:text="@string/total"/>
            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/bTryAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:backgroundTint="@color/sariq"
                android:paddingVertical="10dp"
                android:text="@string/testni_qayta_ishlash"
                android:textColor="@color/kulrang"
                android:textSize="26sp" />

            <Button
                android:id="@+id/bMenu"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:backgroundTint="@color/sariq"
                android:paddingVertical="10dp"
                android:text="@string/asosiy_menuga_qaytish"
                android:textColor="@color/kulrang"
                android:textSize="26sp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>