<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutToolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/sariq"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivMenu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_menu"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/img" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/kulrang"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/bGraphics"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="26dp"
                    android:backgroundTint="@color/sariq"
                    android:paddingVertical="10dp"
                    android:text="@string/grafiklar"
                    android:textColor="@color/kulrang"
                    android:textSize="26sp" />

                <Button
                    android:id="@+id/bBooks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="26dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/sariq"
                    android:paddingVertical="10dp"
                    android:text="@string/kitoblar"
                    android:textColor="@color/kulrang"
                    android:textSize="26sp" />

                <Button
                    android:id="@+id/bVideos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="26dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/sariq"
                    android:paddingVertical="10dp"
                    android:text="@string/video_darsliklar"
                    android:textColor="@color/kulrang"
                    android:textSize="26sp" />

                <Button
                    android:id="@+id/bTests"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="26dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/sariq"
                    android:paddingVertical="10dp"
                    android:text="@string/testlar"
                    android:textColor="@color/kulrang"
                    android:textSize="26sp" />

                <Button
                    android:id="@+id/bTasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="26dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/sariq"
                    android:paddingVertical="10dp"
                    android:text="@string/tasks"
                    android:textColor="@color/kulrang"
                    android:textSize="26sp" />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:itemTextColor="@color/kulrang"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>